Fixed alignment of all css selectors. Removed commented out code in portfolio.css

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,13 +1,3 @@
-/* * {
-    box-sizing: border-box;
-  } */
-
-/* body {
-    background-color: #f1f1f1;
-    font-family: Arial;
-    padding-top: 70px;
-} */
-
 /* Center website */
 main {
     max-width: 800px;
